added v11.3 to changelog

--- a/index.html
+++ b/index.html
@@ -1310,8 +1310,7 @@
                                 <div class="div_5">
                                     <strong class="added"> added</strong>
                                     <ul style="list-style-type: disc; padding-left: 20px;">
-                                        <li>link to new blog webpage (blog.hannahcodes.co.uk)</li>
-                                        <li>new cards on project.html</li>
+
                                     </ul>
                                     <strong class="removed">removed</strong>
                                     <ul style="list-style-type: disc; padding-left: 20px;">
@@ -1322,9 +1321,7 @@
                                     </ul>
                                     <strong class="fixed"> fixed</strong>
                                     <ul style="list-style-type: disc; padding-left: 20px;">
-                                        <li>some nav bar links, which were not linked to the correct url</li>
-                                        <li>some image thumbnails not displaying correctly</li>
-                                        <li>an image not displaying</li>
+
                                     </ul>
                                     <strong class="amended"> amended </strong>
                                     <ul style="list-style-type: disc; padding-left: 20px;">
@@ -1401,12 +1398,9 @@
                                 <hr class="div_hr_3">
                                 <h2 class="h2_2"> dev 8 </h2>
                                 <p>01/10/22</p>
-                                <a class="header_date_a"
-                                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/d398f989fbc1eba1061bea3f87ae43dee8780369">#dev8</a>
+                                <a class="header_date_a" href="">#dev8</a>
                                 <div class="div_3">
-                                    <strong class="amended"> amended </strong>
-                                    <ul style="list-style-type: disc; padding-left: 20px;">
-                                        <li>hp-v4 image thumbnail preview on project.html card</li>
+
                                     </ul>
                                 </div>
 
