--- a/index.new.html
+++ b/index.new.html
@@ -1487,13 +1487,13 @@
         <hr id="v11.3">
         <div class="version">
             <h2>V11.3</h2>
-            <h3 class="version_date"> 26/04/22 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/"
+            <h3 class="version_date"> 01/10/22 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/74"
                     class="a_link"><img class="svg_git"
                         src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">
-                    41</a> <a href="https://old.hannahcodes.co.uk/hannahcodes/v10.1/index.html" class="a_link"><img
+                    74</a> <a href="https://old.hannahcodes.co.uk/hannahcodes/v11.3/index.html" class="a_link"><img
                         class="svg_git" src="https://assets.hannahcodes.co.uk/images/logo/monitor-light.svg">
                     website</a>
-                <a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v10.1"
+                <a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v11.3"
                     class="a_link"><img class="svg_git"
                         src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">
                     source-code</a>
@@ -1502,50 +1502,107 @@
                 <li>
                     <strong class="added">added</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>link to new blog webpage (blog.hannahcodes.co.uk)</li>
+                        <li>new cards on project.html</li>
                         </ll>
                     </ul>
                 <li>
                     <strong class="fixed">fixed:</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>some nav bar links, which were not linked to the correct url</li>
+                        <li>some image thumbnails not displaying correctly</li>
+                        <li>an image not displaying</li>
+                    </ul>
+                </li>
+                <li>
+                    <strong class="fixed">fixed:</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>about text on about.html</li>
+                        <li>work experience about section on about.html</li>
+                        <li>readme.md file to include new link to hannahcodes blogs</li>
+                        <li>links to old version of hannahcodes.co.uk as they can now be found at <a
+                                href="https://old.hannahcodes.co.uk"> https://old.hannahcodes.co.uk </a> <a
+                                href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/"> Github sorce code
+                            </a></li>
+                        <li>readme.md file</li>
+                        <li>some project links</li>
+                        <li>project page image thumbnail preview on index.html</li>
                     </ul>
                 </li>
                 <hr class="hr_divider">
-                <h3 class="h3_header"> rc 3</h3>
-                <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+                <h3 class="h3_header"> rc 4</h3>
+                <h3> 01/10/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/73" class="a_link">
                         <img class="svg_git"
-                            src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                            src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">73</a></h3>
+                <strong class="fixed"> fixed</strong>
+                <ul style="list-style-type: disc; padding-left: 20px;">
+                    <li>an image not displaying</li>
+                </ul>
+                <strong class="amended"> amended </strong>
+                <ul style="list-style-type: disc; padding-left: 20px;">
+                    <li>project page image thumbnail preview on index.html</li>
+                </ul>
+            </ul>
+            </li>
+            <hr class="hr_divider">
+            <h3 class="h3_header"> Dev 10</h3>
+            <h3> 01//10/22<a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/90b33416b965272d4c481f6488f4e49b6fda24e6"
+                    class="a_link">
+                    <img class="svg_git"
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...9b6fda24e6</a></h3>
+            <strong class="fixed"> fixed</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>an image not displaying</li>
+            </ul>
+            </ul>
+            </li>
+            <hr class="hr_divider">
+            <h3 class="h3_header"> Dev 9</h3>
+            <h3> 01/10/22<a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/6339906632e8884b679ef4e314e5ab15b2eb9fb0"
+                    class="a_link">
+                    <img class="svg_git"
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...5b2eb9fb0</a></h3>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>project page image thumbnail preview on index.html</li>
             </ul>
             </ul>
             </li>
             <hr class="hr_divider">
             <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3> 01/10/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/72" class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">72</a></h3>
+            <strong class="added"> added</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>new card on project.html</li>
+            </ul>
+            <strong class="removed">removed</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>some old blog css code that was no longer needed</li>
+            </ul>
+            <strong class="fixed"> fixed</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>some image thumbnails not displaying correctly</li>
+            </ul>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>some project links</li>
             </ul>
             </ul>
             </li>
             <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3 class="h3_header"> Dev 8</h3>
+            <h3> 01/10/22<a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/d398f989fbc1eba1061bea3f87ae43dee8780369"
+                    class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
-            </ul>
-            </ul>
-            </li>
-            <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
-                    <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
-            </ul>
-            </ul>
-            </li>
-            <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
-                    <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...ee8780369</a></h3>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>hp-v4 image thumbnail preview on project.html card</li>
             </ul>
             </ul>
             </li>
