added v11.3.1 & v11.3.2 to index.new.html

--- a/index.new.html
+++ b/index.new.html
@@ -1353,13 +1353,13 @@
         <hr id="v11.3.2">
         <div class="version">
             <h2>V11.3.2</h2>
-            <h3 class="version_date"> 26/04/22 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/"
+            <h3 class="version_date"> 26/10/22 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/80"
                     class="a_link"><img class="svg_git"
                         src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">
-                    41</a> <a href="https://old.hannahcodes.co.uk/hannahcodes/v10.1/index.html" class="a_link"><img
+                    80</a> <a href="https://old.hannahcodes.co.uk/hannahcodes/v11.3.2/index.html" class="a_link"><img
                         class="svg_git" src="https://assets.hannahcodes.co.uk/images/logo/monitor-light.svg">
                     website</a>
-                <a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v10.1"
+                <a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v11.3.2"
                     class="a_link"><img class="svg_git"
                         src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">
                     source-code</a>
@@ -1368,42 +1368,88 @@
                 <li>
                     <strong class="added">added</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>new project card for hannahcodes.co.uk v11.3.2</li>
                         </ll>
                     </ul>
                 <li>
                     <strong class="fixed">fixed:</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>blog post 7 and 8 links</li>
                     </ul>
+                    <strong class="amended">amended</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>index.html latest blog section, which now shows post 9</li>
+                        <li>hc thumbnail image preview for v11.3+</li>
+                        <li>readme.md file</li>
+                        <li>formatted main.css file</ </ll>
+                    </ul>
+                <li>
                 </li>
                 <hr class="hr_divider">
-                <h3 class="h3_header"> rc 3</h3>
-                <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+                <h3 class="h3_header"> rc 2</h3>
+                <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/79" class="a_link">
                         <img class="svg_git"
-                            src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                            src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">79</a></h3>
+                <strong class="amended"> amended </strong>
+                <ul style="list-style-type: disc; padding-left: 20px;">
+                    <li>readme.md file</li>
+                </ul>
+            </ul>
+            </li>
+            <hr class="hr_divider">
+            <h3 class="h3_header"> Dev 2</h3>
+            <h3> 26/10/22<a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/d5c87e7e9443c7b326f1753e9d2c7b6411cb2b0d"
+                    class="a_link">
+                    <img class="svg_git"
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...6411cb2b0d</a></h3>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>readme.md file</li>
             </ul>
             </ul>
             </li>
             <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3 class="h3_header"> rc 1</h3>
+            <h3> 26/10/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/78" class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">78</a></h3>
+            <strong class="added"> added</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>new project card for hannahcodes.co.uk v11.3.2</li>
+            </ul>
+            <strong class="fixed"> fixed</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>blog post 7 and 8 links</li>
+            </ul>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>index.html latest blog section, which now shows post 9</li>
+                <li>hc thumbnail image preview for v11.3+</li>
+                <li>formatted main.css file</li>
             </ul>
             </ul>
             </li>
             <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3 class="h3_header"> Dev 1</h3>
+            <h3> 26/10/22<a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/adecbcb5ef122020df613ee3fabafb74c87c408d"
+                    class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...74c87c408d</a></h3>
+            <strong class="added"> added</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>new project card for hannahcodes.co.uk v11.3.2</li>
             </ul>
+            <strong class="fixed"> fixed</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>blog post 7 and 8 links</li>
             </ul>
-            </li>
-            <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
-                    <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>index.html latest blog section, which now shows post 9</li>
+                <li>hc thumbnail image preview for v11.3+</li>
+                <li>formatted main.css file</li>
             </ul>
             </ul>
             </li>
@@ -1412,13 +1458,13 @@
         <hr id="v11.3.1">
         <div class="version">
             <h2>V11.3.1</h2>
-            <h3 class="version_date"> 26/04/22 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/"
+            <h3 class="version_date"> 24/10/22 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/77"
                     class="a_link"><img class="svg_git"
                         src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">
-                    41</a> <a href="https://old.hannahcodes.co.uk/hannahcodes/v10.1/index.html" class="a_link"><img
+                    77</a> <a href="https://old.hannahcodes.co.uk/hannahcodes/v11.3.1/index.html" class="a_link"><img
                         class="svg_git" src="https://assets.hannahcodes.co.uk/images/logo/monitor-light.svg">
                     website</a>
-                <a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v10.1"
+                <a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v11.3.1"
                     class="a_link"><img class="svg_git"
                         src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">
                     source-code</a>
@@ -1427,58 +1473,129 @@
                 <li>
                     <strong class="added">added</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>new project cards for hannahcodes.co.uk - v11.2, v11.2.1, v11.3 and
+                            v11.3.1</li>
                         </ll>
                     </ul>
                 <li>
                     <strong class="fixed">fixed:</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>typos on readme.md file</li>
                     </ul>
+                    <strong class="amended">amended</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>index.html latest blog section, which now shows post 7 and 8</li>
+                        <li>hc changelog thumbnail image preview</li>
+                        <li>readme.md file</li>
+                        </ll>
+                    </ul>
+                <li>
                 </li>
                 <hr class="hr_divider">
-                <h3 class="h3_header"> rc 3</h3>
-                <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+                <h3 class="h3_header"> rc 2</h3>
+                <h3> 24/10/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/176" class="a_link">
                         <img class="svg_git"
-                            src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                            src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">76</a></h3>
+                <strong class="added"> added</strong>
+                <ul style="list-style-type: disc; padding-left: 20px;">
+                    <li>new project cards for hannahcodes.co.uk - v11.2, v11.2.1, v11.3 and
+                        v11.3.1</li>
+                </ul>
+                <strong class="fixed"> fixed</strong>
+                <ul style="list-style-type: disc; padding-left: 20px;">
+                    <li>typos on readme.md file</li>
+                </ul>
+                <strong class="amended"> amended </strong>
+                <ul style="list-style-type: disc; padding-left: 20px;">
+                    <li>hc changelog thumbnail image preview</li>
+                    <li>readme.md file</li>
+                </ul>
+            </ul>
+            </li>
+            <hr class="hr_divider">
+            <h3 class="h3_header"> Dev 5</h3>
+            <h3> 24/10/22<a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/ce089037b38fbefe3af36677f6a8114279f316a7"
+                    class="a_link">
+                    <img class="svg_git"
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...4279f316a7</a></h3>
+            <strong class="fixed"> fixed</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>typos on readme.md file</li>
             </ul>
             </ul>
             </li>
             <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3 class="h3_header"> Dev 4</h3>
+            <h3> 24/10/22<a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/5699148b2f93e7b5f0b6c8624db0a8e97962e30e"
+                    class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...e97962e30e</a>
+            </h3>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>readme.md file</li>
             </ul>
             </ul>
             </li>
             <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3 class="h3_header"> Dev 3</h3>
+            <h3> 24/10/22<a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/d1881dcfedb9ffaa05a4218ce024cba8b2dcc1ed"
+                    class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...a8b2dcc1ed</a>
+
+            </h3>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>readme.md file</li>
+
             </ul>
             </ul>
             </li>
             <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3 class="h3_header"> Dev 2</h3>
+            <h3> 24/10/22<a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/d1d75d3c3813f1d7ab76918dd7d8714e90e295df"
+                    class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...4e90e295df</a>
+            </h3>
+            <strong class="added"> added</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>new project cards for hannahcodes.co.uk - v11.2, v11.2.1, v11.3 and
+                    v11.3.1</li>
+            </ul>
+            <strong class="amended"> amended</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>hc changelog thumbnail image preview</li>
             </ul>
             </ul>
             </li>
             <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3 class="h3_header"> rc 1</h3>
+            <h3> 15/10/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/75" class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">75</a></h3>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>index.html latest blog section, which now shows post 7 and 8</li>
             </ul>
             </ul>
             </li>
             <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3 class="h3_header"> dev 1</h3>
+            <h3> 15/10/22<a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/189e5c4c0298fdfd34860a1538a9c46b076851a6"
+                    class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...6b076851a6</a>
+            </h3>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>index.html latest blog section, which now shows post 7 and 8</li>
             </ul>
             </ul>
             </li>
